examples/errors/undefined_var.zirc
showf("Value is %d", undefined_variable)